Fix event styling

--- a/popup/templates/event.html
+++ b/popup/templates/event.html
@@ -2,6 +2,7 @@
     <style>
         .event {
             padding: 1rem;
+            margin: 1.5rem;
             background-color: var(--color-gray-dark);
             color: var(--color-white);
         }
