Remove default message for market slots

--- a/popup/templates/event.html
+++ b/popup/templates/event.html
@@ -48,7 +48,7 @@
 
         <!-- Markets -->
         <div class="event-markets">
-            <slot name="markets">No markets.</slot>
+            <slot name="markets"></slot>
         </div>
     </div>
 </template>
