--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,3 +1,15 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+:root {
+    --color-green: #00CA84;
+    --color-orange: #FF8000;
+    --color-white: #FFFFFF;
+    --color-black: #161616;
+    --color-gray: #3E3E3E;
+    --color-gray-dark: #1E1E1E;
+    --color-gray-light: #969696;
+}
+
+#app {
+    background-color: var(--color-black);
+    color: var(--color-white);
+    width: 24rem;
+}
