Refactor service worker and content script
- Rename functions and msg types to have prefix "add", "update" and "remove" for clarity
- Extract msg validation logic to a module
- Rename "value" to "sellValue" ("sell-valiue" in popup)
- Change data structure in message, now it's required to send a "type" and optionally "data"
- Extracted "upperThreshold", "lowerThreshold" and "status" to getters in content script
- Add messages for updating contract values from content script

--- a/popup/templates/contract.html
+++ b/popup/templates/contract.html
@@ -61,7 +61,7 @@
         </div>
         <slot name="name"></slot>
         <div class="ml-auto">
-            <slot name="value"></slot>
+            <slot name="sell-value"></slot>
         </div>
     </div>
 </template>
